feat: US-010 API implementation, document update
